--- a/sorpresa.html
+++ b/sorpresa.html
@@ -1,167 +1,165 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>¿Querés ser mi novia?</title>
-    <style>
-        body {
-            margin: 0;
-            background: #ffe6f0;
-            font-family: 'Comic Sans MS', cursive;
-            overflow: hidden;
-        }
+  <meta charset="UTF-8">
+  <title>¿Querés ser mi novia?</title>
+  <style>
+    body {
+      margin: 0;
+      background: #ffe6f0;
+      font-family: 'Comic Sans MS', cursive;
+      overflow: hidden;
+    }
 
-        .contenedor {
-            text-align: center;
-            margin-top: 100px;
-            z-index: 10;
-            position: relative;
-        }
+    .contenedor {
+      text-align: center;
+      margin-top: 100px;
+      z-index: 10;
+      position: relative;
+    }
 
-        h1 {
-            color: #d63384;
-            font-size: 40px;
-            margin: 20px;
-        }
+    h1 {
+      color: #d63384;
+      font-size: 40px;
+      margin: 20px;
+    }
 
-        .botones {
-            margin-top: 30px;
-            position: relative;
-            height: 200px;
-        }
+    .botones {
+      margin-top: 30px;
+      position: relative;
+      height: 200px;
+    }
 
-        button {
-            padding: 15px 25px;
-            font-size: 20px;
-            border-radius: 20px;
-            border: none;
-            cursor: pointer;
-            transition: 0.3s;
-            position: absolute;
-        }
+    button {
+      padding: 15px 25px;
+      font-size: 20px;
+      border-radius: 20px;
+      border: none;
+      cursor: pointer;
+      transition: 0.3s;
+      position: absolute;
+    }
 
-        .si {
-            background-color: #ff66b2;
-            color: white;
-            left: 35%;
-        }
+    .si {
+      background-color: #ff66b2;
+      color: white;
+      left: 35%;
+    }
 
-        .no {
-            background-color: #cccccc;
-            color: #333;
-            left: 55%;
-        }
+    .no {
+      background-color: #cccccc;
+      color: #333;
+      left: 55%;
+    }
 
-        .si:hover {
-            background-color: #ff3399;
-        }
+    .si:hover {
+      background-color: #ff3399;
+    }
 
-        .no:hover {
-            background-color: #999999;
-        }
+    .no:hover {
+      background-color: #999999;
+    }
 
-        .corazones::before,
-        .corazones::after {
-            content: "💖💗💓💘💕💞";
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            font-size: 30px;
-            animation: float 10s linear infinite;
-            white-space: nowrap;
-            z-index: 0;
-        }
+    .mensaje-final {
+      display: none;
+      font-size: 32px;
+      color: #ff3385;
+      margin-top: 50px;
+    }
 
-        .corazones::after {
-            animation-delay: 5s;
-        }
+    .corazon {
+      position: absolute;
+      font-size: 24px;
+      animation: flotar 10s linear infinite;
+      pointer-events: none;
+    }
 
-        @keyframes float {
-            0% {
-                transform: translateY(100vh) translateX(-100%);
-            }
-            100% {
-                transform: translateY(-100vh) translateX(100%);
-            }
-        }
+    @keyframes flotar {
+      0% {
+        transform: translateY(100vh);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(-10vh);
+        opacity: 0;
+      }
+    }
 
-        .mensaje-final {
-            display: none;
-            font-size: 32px;
-            color: #ff3385;
-            margin-top: 50px;
-        }
+    audio {
+      display: none;
+    }
 
-        audio {
-            display: none;
-        }
+    @media screen and (max-width: 600px) {
+      h1 {
+        font-size: 28px;
+      }
 
-        /* Responsivo para celulares */
-        @media screen and (max-width: 600px) {
-            h1 {
-                font-size: 28px;
-            }
-
-            button {
-                font-size: 18px;
-                padding: 12px 20px;
-            }
-
-            .si {
-                left: 25%;
-            }
-
-            .no {
-                left: 55%;
-            }
-        }
-    </style>
+      button {
+        font-size: 18px;
+        padding: 12px 20px;
+      }
+    }
+  </style>
 </head>
+
 <body>
 
-    <!-- Música romántica de fondo -->
-    <audio autoplay loop>
-        <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mp3">
-        Tu navegador no soporta audio.
-    </audio>
+  <audio autoplay loop>
+    <source src="TU_URL_DE_AUDIO_AQUI.mp3" type="audio/mp3">
+  </audio>
 
-    <div class="contenedor">
-        <h1>¿Querés ser mi novia? ❤️</h1>
-        <div class="botones">
-            <button class="si">Sí 🥰</button>
-            <button class="no">No 😔</button>
-        </div>
-        <div class="mensaje-final">¡Sabía que ibas a decir que sí! 💖 Te amo mucho 😘</div>
+  <div class="contenedor">
+    <h1>¿Querés ser mi novia? ❤️</h1>
+    <div class="botones">
+      <button class="si">Sí 🥰</button>
+      <button class="no">No 😔</button>
     </div>
+    <div class="mensaje-final">¡Sabía que ibas a decir que sí! 💖 Te amo mucho 😘 </div>
+  </div>
 
-    <div class="corazones"></div>
+  <!-- Contenedor donde se agregan los corazones -->
+  <div id="corazones-container"></div>
 
-    <script>
-        const btnNo = document.querySelector('.no');
-        const btnSi = document.querySelector('.si');
-        const mensaje = document.querySelector('.mensaje-final');
-        const contenedor = document.querySelector('.botones');
+  <script>
+    const btnNo = document.querySelector('.no');
+    const btnSi = document.querySelector('.si');
+    const mensaje = document.querySelector('.mensaje-final');
 
-        // Mueve el botón "No" aleatoriamente dentro del área del contenedor
-        btnNo.addEventListener('mouseover', () => {
-            const contWidth = contenedor.offsetWidth;
-            const contHeight = contenedor.offsetHeight;
-            const btnWidth = btnNo.offsetWidth;
-            const btnHeight = btnNo.offsetHeight;
+    // Movimiento del botón "No"
+    btnNo.addEventListener('mouseover', () => {
+      const maxWidth = window.innerWidth - btnNo.offsetWidth;
+      const maxHeight = 200;
+      const x = Math.random() * maxWidth;
+      const y = Math.random() * maxHeight;
+      btnNo.style.left = `${x}px`;
+      btnNo.style.top = `${y}px`;
+    });
 
-            const x = Math.random() * (contWidth - btnWidth);
-            const y = Math.random() * (contHeight - btnHeight);
+    btnSi.addEventListener('click', () => {
+      mensaje.style.display = 'block';
+      btnSi.style.display = 'none';
+      btnNo.style.display = 'none';
+    });
 
-            btnNo.style.left = `${x}px`;
-            btnNo.style.top = `${y}px`;
-        });
+    // Generador de corazones flotantes
+    function crearCorazon() {
+      const corazon = document.createElement('div');
+      corazon.classList.add('corazon');
+      corazon.textContent = '💖';
+      corazon.style.left = Math.random() * 100 + 'vw';
+      corazon.style.fontSize = (Math.random() * 20 + 20) + 'px';
+      corazon.style.animationDuration = (Math.random() * 5 + 5) + 's';
 
-        btnSi.addEventListener('click', () => {
-            mensaje.style.display = 'block';
-            btnSi.style.display = 'none';
-            btnNo.style.display = 'none';
-        });
-    </script>
+      document.getElementById('corazones-container').appendChild(corazon);
+
+      // Eliminar el corazón después de que termina su animación
+      setTimeout(() => {
+        corazon.remove();
+      }, 10000);
+    }
+
+    // Generar corazones cada 300ms
+    setInterval(crearCorazon, 50);
+  </script>
 </body>
 </html>
