--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <body>
 
   <!-- Música de fondo -->
-  <audio autoplay loop>
+  <audio id="musica" autoplay loop>
     <source src="https://github.com/GeronimoGuevara/queridaprincesa/blob/8233691c7ffccb135ee7614a636c678668fcea35/Romantic%20Sax%20-%20How%20Deep%20is%20Your%20Love.mp3" type="audio/mp3">
   </audio>
 
